# 3d-stack

./: .gitignore  CLAUDE.md  HOWTO.md  README.md  pyproject.toml
examples/: bracket_assembly.json  four_bar_linkage.json  multiaxis_bracket.json  pin_in_hole_assembly.json  robot_arm_linkage.json  shaft_housing.json  stacked_plates_assembly.json  two_bar_linkage.json
tests/: test_advanced_doe.py  test_analysis.py  test_assembly.py  test_assembly_process.py  test_composite_gdt.py  test_contingency.py  test_ga_optimizer.py  test_gdt.py  test_linkage.py  test_measurements.py  test_mmc_lmc_mc.py  test_optimizer.py  test_pdf_report.py  test_reporting.py  test_statistics.py  test_step_import.py  test_visualization.py
tolerance_stack/: __init__.py  analysis.py  assembly.py  assembly_analysis.py  assembly_examples.py  assembly_process.py  cli.py  examples.py  gdt.py  gui.py  linkage.py  linkage_analysis.py  linkage_examples.py  linkage_visualize.py  models.py  optimizer.py  reporting.py  statistics.py  step_import.py  visualization.py  visualize.py
